@@ -2,6 +2,7 @@ version 0.8 - dd-MMM-yyyy
  . Actions: CallFuncND doesn't leak if reused (issue #336)
  . AtlasSpriteManager: fixed blend function (part of issue #125)
  . AtlasSprite: render in subpixel by default (issue #414)
+ . Director: added isPaused property (issue #375)
  . ParallaxNode: uses world coordinates (issue #373)
  . TextureMgr: supports loading images asynchronously (issue #420)
 
